[package]
name = "big_space_solari"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Resets bevy_solari (and optionally DLSS) ray-traced lighting temporal history when a big_space floating origin recenters."
documentation = "https://docs.rs/big_space_solari"
repository = "https://github.com/SindSieEcht/big_space_solari"
readme = "README.md"
keywords = ["bevy", "big-space", "floating-origin", "gamedev", "raytracing"]
categories = ["game-development", "rendering"]

[dependencies]
big_space = "0.12"
bevy_app = "0.18"
bevy_ecs = "0.18"
bevy_solari = "0.18"
bevy_anti_alias = { version = "0.18", optional = true, features = ["dlss"] }

[features]
default = []
dlss = ["dep:bevy_anti_alias"]
